--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
 		var random = Math.floor((Math.random() * 10) + 1);
 
-		randomPlanet.random;
+		randomPlanet.[random];
 
 		updateFcts.push(function(delta, now) {
 			//mesh.rotation.x += 1 * delta;
