added empty scene

--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
 
 		var random = Math.floor((Math.random() * 10) + 1);
 
+		scene.empty();
+		renderPluto()
+
 		updateFcts.push(function(delta, now) {
 			//mesh.rotation.x += 1 * delta;
 			//mesh.rotation.y += 1/2 * delta;
