--- a/index.html
+++ b/index.html
@@ -50,71 +50,71 @@
 		//////////////////////////////////////////////////////////////////////////////////
 		//		add an object and make it move					//
 		//////////////////////////////////////////////////////////////////////////////////
-
-		function renderSun() {
-			var mesh = THREEx.Planets.createSun();
-			scene.add(mesh);
-		};
-
-		function renderMercury() {
-			var mesh = THREEx.Planets.createMercury();
-			scene.add(mesh);
-		};
-
-		function renderVenus() {
-			var mesh = THREEx.Planets.createVenus();
-			scene.add(mesh);
-		};
-
-		function renderEarth() {
-			var mesh = THREEx.Planets.createMoon();
-			scene.add(mesh);
-			var earthMesh = THREEx.Planets.createEarth();
-			scene.add(earthMesh);
-			var mesh = THREEx.Planets.createEarthCloud();
-			scene.add(mesh);
-			updateFcts.push(function(delta, now) {
-				mesh.rotation.y += 1 / 8 * delta;
-			});
-		}
-
-		function renderMars() {
-			var mesh = THREEx.Planets.createMars();
-			scene.add(mesh);
-		};
-
-		function renderJupiter() {
-			var mesh = THREEx.Planets.createJupiter();
-			scene.add(mesh);
-		};
-
-		function renderSaturn() {
-			var mesh = THREEx.Planets.createSaturn();
-			mesh.receiveShadow = true;
-			mesh.castShadow = true;
-			scene.add(mesh);
-			var mesh = THREEx.Planets.createSaturnRing();
-			mesh.receiveShadow = true;
-			mesh.castShadow = true;
-			scene.add(mesh);
-		};
-
-
-		function renderUranus() {
-			var mesh = THREEx.Planets.createUranus();
-			mesh.receiveShadow = true;
-			mesh.castShadow = true;
-			scene.add(mesh);
-			var mesh = THREEx.Planets.createUranusRing();
-			mesh.receiveShadow = true;
-			mesh.castShadow = true;
-			scene.add(mesh);
-		};
-
-		function renderNeptune() {
-			var mesh = THREEx.Planets.createNeptune();
-			scene.add(mesh);
-		};
+		
+		// function renderSun() {
+		// 	var mesh = THREEx.Planets.createSun();
+		// 	scene.add(mesh);
+		// };
+		//
+		// function renderMercury() {
+		// 	var mesh = THREEx.Planets.createMercury();
+		// 	scene.add(mesh);
+		// };
+		//
+		// function renderVenus() {
+		// 	var mesh = THREEx.Planets.createVenus();
+		// 	scene.add(mesh);
+		// };
+		//
+		// function renderEarth() {
+		// 	var mesh = THREEx.Planets.createMoon();
+		// 	scene.add(mesh);
+		// 	var earthMesh = THREEx.Planets.createEarth();
+		// 	scene.add(earthMesh);
+		// 	var mesh = THREEx.Planets.createEarthCloud();
+		// 	scene.add(mesh);
+		// 	updateFcts.push(function(delta, now) {
+		// 		mesh.rotation.y += 1 / 8 * delta;
+		// 	});
+		// }
+		//
+		// function renderMars() {
+		// 	var mesh = THREEx.Planets.createMars();
+		// 	scene.add(mesh);
+		// };
+		//
+		// function renderJupiter() {
+		// 	var mesh = THREEx.Planets.createJupiter();
+		// 	scene.add(mesh);
+		// };
+		//
+		// function renderSaturn() {
+		// 	var mesh = THREEx.Planets.createSaturn();
+		// 	mesh.receiveShadow = true;
+		// 	mesh.castShadow = true;
+		// 	scene.add(mesh);
+		// 	var mesh = THREEx.Planets.createSaturnRing();
+		// 	mesh.receiveShadow = true;
+		// 	mesh.castShadow = true;
+		// 	scene.add(mesh);
+		// };
+		//
+		//
+		// function renderUranus() {
+		// 	var mesh = THREEx.Planets.createUranus();
+		// 	mesh.receiveShadow = true;
+		// 	mesh.castShadow = true;
+		// 	scene.add(mesh);
+		// 	var mesh = THREEx.Planets.createUranusRing();
+		// 	mesh.receiveShadow = true;
+		// 	mesh.castShadow = true;
+		// 	scene.add(mesh);
+		// };
+		//
+		// function renderNeptune() {
+		// 	var mesh = THREEx.Planets.createNeptune();
+		// 	scene.add(mesh);
+		// };
 
 
 		function renderPluto() {
@@ -122,22 +122,22 @@
 			scene.add(mesh);
 		};
 
-		var randomPlanet = {
-			1: renderSun(),
-			2: renderMercury(),
-			3: renderVenus(),
-			4: renderEarth(),
-			5: renderMars(),
-			6: renderJupiter(),
-			7: renderSaturn(),
-			8: renderUranus(),
-			9: renderNeptune(),
-			10: renderPluto()
-		};
-
-		var random = Math.floor((Math.random() * 10) + 1);
-
-		
+		// var randomPlanet = {
+		// 	1: renderSun(),
+		// 	2: renderMercury(),
+		// 	3: renderVenus(),
+		// 	4: renderEarth(),
+		// 	5: renderMars(),
+		// 	6: renderJupiter(),
+		// 	7: renderSaturn(),
+		// 	8: renderUranus(),
+		// 	9: renderNeptune(),
+		// 	10: renderPluto()
+		// };
+		//
+		// var random = Math.floor((Math.random() * 10) + 1);
+		//
+		//
 		renderPluto()
 
 		updateFcts.push(function(delta, now) {
