--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		//////////////////////////////////////////////////////////////////////////////////
 		//		add an object and make it move					//
 		//////////////////////////////////////////////////////////////////////////////////
-		
+
 		// function renderSun() {
 		// 	var mesh = THREEx.Planets.createSun();
 		// 	scene.add(mesh);
@@ -122,23 +122,25 @@
 			scene.add(mesh);
 		};
 
-		// var randomPlanet = {
-		// 	1: renderSun(),
-		// 	2: renderMercury(),
-		// 	3: renderVenus(),
-		// 	4: renderEarth(),
-		// 	5: renderMars(),
-		// 	6: renderJupiter(),
-		// 	7: renderSaturn(),
-		// 	8: renderUranus(),
-		// 	9: renderNeptune(),
-		// 	10: renderPluto()
-		// };
+		var randomPlanet = {
+			1: renderSun(),
+			2: renderMercury(),
+			3: renderVenus(),
+			4: renderEarth(),
+			5: renderMars(),
+			6: renderJupiter(),
+			7: renderSaturn(),
+			8: renderUranus(),
+			9: renderNeptune(),
+			10: renderPluto()
+		};
 		//
-		// var random = Math.floor((Math.random() * 10) + 1);
+		var random = Math.floor((Math.random() * 10) + 1);
 		//
 		//
-		renderPluto()
+
+		randomPlanet[10];
+
 
 		updateFcts.push(function(delta, now) {
 			//mesh.rotation.x += 1 * delta;
