--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
 		// 	scene.add(mesh);
 		// };
 		//
-		// function renderNeptune() {
-		// 	var mesh = THREEx.Planets.createNeptune();
-		// 	scene.add(mesh);
-		// };
+		function renderNeptune() {
+			var mesh = THREEx.Planets.createNeptune();
+			scene.add(mesh);
+		};
 
 
 		function renderPluto() {
@@ -139,7 +139,7 @@
 		//
 		//
 
-		randomPlanet[10];
+		randomPlanet[9];
 
 
 		updateFcts.push(function(delta, now) {
