--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 		var random = Math.floor((Math.random() * 10) + 1);
 
 		console.log(random);
-		randomPlanet[3]();
+		randomPlanet[random]();
 
 
 		updateFcts.push(function(delta, now) {
