--- a/index.html
+++ b/index.html
@@ -136,8 +136,11 @@
 		};
 
 		var random = Math.floor((Math.random() * 10) + 1);
-
 		console.log(random);
+
+		var mesh = THREEx.Planets.createStarfield();
+		scene.add(mesh);
+
 		randomPlanet[random]();
 
 
