--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 		var random = Math.floor((Math.random() * 10) + 1);
 		console.log(random);
 
-		// var mesh = THREEx.Planets.createStarfield();
-		// scene.add(mesh);
+		var mesh = THREEx.Planets.createStarfield();
+		scene.add(mesh);
 
 		randomPlanet[random]();
 
