--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 <body style='margin: 0px; background-color: #000000; overflow: hidden;'>
 
-<div class="container-fluid">
-	<div class="row-fluid">
+<!-- <div class="container-fluid">
+	<div class="row-fluid"> -->
 	<p id="instructions">
 			'1' '2' '3' '4' toggle visualizers <br>
 			'R' 'G' 'B' toggle colors <br>
@@ -210,8 +210,8 @@
 			})
 		})
 	</script>
-	</div>
-	</div>
+	<!-- </div>
+	</div> -->
 
 <!-- BOOTSTRAP -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
