--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body style='margin: 0px; background-color: #000000; overflow: hidden;'>
 
 <div class="container-fluid">
-	<div class="row-fluid">
+	<div class="row">
 
 		<form id="menu">
 			<div class="btn-group">
