--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body style='margin: 0px; background-color: #000000; overflow: hidden;'>
 
-<div class="container-fluid">
+<div class="container">
 	<div class="row">
 
 		<form id="menu">
@@ -25,18 +25,18 @@
 				Select Your Star Sign
 				</button>
 				<div class="dropdown-menu">
-					<a class="instructions" id="aries" href="#">Aries (3/20 - 4/19)</a>
-					<a class="instructions" id="taurus" href="#">Taurus (4/20 - 5/21)</a>
-					<a class="instructions" id="gemini" href="#">Gemini (5/22 - 6/21)</a>
-					<a class="instructions" id="cancer" href="#">Cancer (6/22 - 7/22)</a>
-					<a class="instructions" id="leo" href="#">Leo (7/23 - 8/22)</a>
-					<a class="instructions" id="virgo" href="#">Virgo (8/23 - 9/22)</a>
-					<a class="instructions" id="libra" href="#">Libra (9/23 - 10/22)</a>
-					<a class="instructions" id="scorpio" href="#">Scorpio (10/23 - 11/22)</a>
-					<a class="instructions" id="sagittarius" href="#">Sagittarius (11/23 - 12/21)</a>
-					<a class="instructions" id="capricorn" href="#">Capricorn (12/22 - 1/20)</a>
-					<a class="instructions" id="aquarius" href="#">Aquarius (1/21 - 2/19)</a>
-					<a class="instructions" id="pisces" href="#">Pisces (2/20 - 3/19)</a>
+					<a class="instructions" id="aries" href="#">Aries (3/20 - 4/19)</a> <br>
+					<a class="instructions" id="taurus" href="#">Taurus (4/20 - 5/21)</a> <br>
+					<a class="instructions" id="gemini" href="#">Gemini (5/22 - 6/21)</a> <br>
+					<a class="instructions" id="cancer" href="#">Cancer (6/22 - 7/22)</a> <br>
+					<a class="instructions" id="leo" href="#">Leo (7/23 - 8/22)</a> <br>
+					<a class="instructions" id="virgo" href="#">Virgo (8/23 - 9/22)</a> <br>
+					<a class="instructions" id="libra" href="#">Libra (9/23 - 10/22)</a> <br>
+					<a class="instructions" id="scorpio" href="#">Scorpio (10/23 - 11/22)</a> <br>
+					<a class="instructions" id="sagittarius" href="#">Sagittarius (11/23 - 12/21)</a> <br>
+					<a class="instructions" id="capricorn" href="#">Capricorn (12/22 - 1/20)</a> <br>
+					<a class="instructions" id="aquarius" href="#">Aquarius (1/21 - 2/19)</a> <br>
+					<a class="instructions" id="pisces" href="#">Pisces (2/20 - 3/19)</a> <br>
 				</div>
 			</div>
 		</form>
