more index/style troubleshooting

--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
 				</div>
 			</div>
 		</form>
-
-		<p> test </p>
-		
+		<marquee>I'm using a marquee, fuck the haters!</marquee>
 		<section id="results">
 
 		</section>
