--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				</div>
 			</div>
 		</form>
-		<marquee>I'm using a marquee, fuck the haters!</marquee>
+		<marquee><p>I'm using a marquee, fuck the haters!</p></marquee>
 		<section id="results">
 
 		</section>
