--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
 				</div>
 			</div>
 		</form>
-		<marquee><p>I'm using a marquee, fuck the haters!</p></marquee>
 		<section id="results">
-
+			<marquee>
+				<p>Look before you leap, says Ganesha. Cupid has strung his bow and aimed an arrow at you. Love's labour will easily aid you to woo a young, tender heart. But don't be swept away by easy prospects and guard your reputation at all costs.<p>
+			</marquee>
 		</section>
 
 	<script>
