more marquee ts

--- a/index.html
+++ b/index.html
@@ -40,11 +40,6 @@
 				</div>
 			</div>
 		</form>
-		<section id="results">
-			<marquee>
-				<p>Look before you leap, says Ganesha. Cupid has strung his bow and aimed an arrow at you. Love's labour will easily aid you to woo a young, tender heart. But don't be swept away by easy prospects and guard your reputation at all costs.<p>
-			</marquee>
-		</section>
 
 	<script>
 		var renderer = new THREE.WebGLRenderer({
@@ -230,6 +225,17 @@
 			})
 		})
 	</script>
+
+	<section id="footer">
+		<marquee>
+			<section id="planet-results">
+			</section>
+
+			<section id="results">
+			</section>
+		</marquee>
+	</section>
+	
 	</div>
 	</div>
 
