--- a/index.html
+++ b/index.html
@@ -232,10 +232,11 @@
 			</section>
 
 			<section id="results">
+				<p>One minute you're partners, working away together; then suddenly they've adopted a different role. If you're uncomfortable with it, say so. You won't get to the bottom of this by pretending it's not happening.</p>
 			</section>
 		</marquee>
 	</section>
-	
+
 	</div>
 	</div>
 
