--- a/index.html
+++ b/index.html
@@ -229,12 +229,8 @@
 	</div>
 
 	<section id="footer">
-		<marquee>
-			<section id="planet-results">
-			</section>
-
-			<section id="results">
-			</section>
+		<marquee id="#results">
+	
 		</marquee>
 	</section>
 <!-- BOOTSTRAP -->
