--- a/index.html
+++ b/index.html
@@ -229,8 +229,9 @@
 	</div>
 
 	<section id="footer">
-		<marquee id="#results">
-	
+		<marquee>
+			<p id="#results">
+			</p>
 		</marquee>
 	</section>
 <!-- BOOTSTRAP -->
