--- a/index.html
+++ b/index.html
@@ -230,8 +230,10 @@
 
 	<section id="footer">
 		<marquee>
+			<section id="horoscopes">
 			<p id="#results">
 			</p>
+			</section>
 		</marquee>
 	</section>
 <!-- BOOTSTRAP -->
