--- a/index.html
+++ b/index.html
@@ -231,8 +231,7 @@
 	<section id="footer">
 		<marquee>
 			<section id="horoscopes">
-			<p id="#results">
-			</p>
+			<p id="results">
 			</section>
 		</marquee>
 	</section>
