--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 	</div>
 
 	<p id="planet-info">
-		You are looking at
+		You are looking at planet Uranus.<br>
+		Uranus will be retrograde from Aug 4 - Jan 3 (2018).
 	<p>
 
 
