styling planet info 8

--- a/index.html
+++ b/index.html
@@ -44,9 +44,13 @@
 	</div>
 
 	<p id="planet-info">
-		You are looking at planet Uranus.<br>
-		Uranus will be retrograde from Aug 4 - Jan 3 (2018).
-	<p>
+		You are looking at planet Mercury.<br>
+		Uranus will be retrograde from:<br>
+		<ul><li> Dec 19 (2016) - Jan 8 </li>
+			<li>Apr 10 - May 3</li>
+			<li>Aug 13 - Sept 5</li>
+			<li>Dec 3 - Dec 23</li></ul>
+	</p>
 
 
 
