--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
 
 	<p id="planet-info">
 		You are looking at planet Mercury.<br>
-		Uranus will be retrograde from:<br>
-		<ul><li> Dec 19 (2016) - Jan 8 </li>
+		Mercury will be retrograde:<br>
+		<ol type="I">
+			<li>Dec 19 (2016) - Jan 8</li>
 			<li>Apr 10 - May 3</li>
 			<li>Aug 13 - Sept 5</li>
-			<li>Dec 3 - Dec 23</li></ul>
+			<li>Dec 3 - Dec 23</li>
+		</ol>
 	</p>
 
 
