styling planet info 10

--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
 		</div>
 	</div>
 
-	<p id="planet-info">
-		You are looking at planet Mercury.<br>
-		Mercury will be retrograde:<br>
-		<ol type="I">
-			<li>Dec 19 (2016) - Jan 8</li>
-			<li>Apr 10 - May 3</li>
-			<li>Aug 13 - Sept 5</li>
-			<li>Dec 3 - Dec 23</li>
-		</ol>
-	</p>
-
-
+	<div>
+		<p id="planet-info">
+			You are looking at planet Mercury.<br> Mercury will be retrograde:<br>
+			<p>
+				<ol type="I">
+					<li>Dec 19 (2016) - Jan 8</li>
+					<li>Apr 10 - May 3</li>
+					<li>Aug 13 - Sept 5</li>
+					<li>Dec 3 - Dec 23</li>
+				</ol>
+			</p>
+	</div>
 
 	<script>
 		var renderer = new THREE.WebGLRenderer({
