styling planet info 11

--- a/index.html
+++ b/index.html
@@ -46,15 +46,9 @@
 	<div>
 		<p id="planet-info">
 			You are looking at planet Mercury.<br> Mercury will be retrograde:<br>
-			<p>
-				<ol type="I">
-					<li>Dec 19 (2016) - Jan 8</li>
-					<li>Apr 10 - May 3</li>
-					<li>Aug 13 - Sept 5</li>
-					<li>Dec 3 - Dec 23</li>
-				</ol>
-			</p>
-	</div>
+			I. Dec 19 (2016) - Jan 8 <br> II. Apr 10 - May 3 <br> III. Aug 13 - Sept 5
+			<br> IV. Dec 3 - Dec 23
+		</p>
 
 	<script>
 		var renderer = new THREE.WebGLRenderer({
