added About Me link

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 		</div>
 	</div>
 
+	<a id="about" href="about.html">About Me </a>
+
 	<p id="instructions">
-		Refresh to see a new planet. <br> Select your star sign to see horoscopes and other info.<br>
+		Refresh to see a new planet. <br> Select your star sign to see horoscopes & more.<br>
 	</p>
-
-
 
 	<p id="planet-info">
 	</p>
