--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<a id="about" href="about.html">About Me </a>
 
 	<p id="instructions">
-		Refresh to see a new planet. <br> Select your star sign to see horoscopes & more.<br>
+		Refresh to see a new planet. Select your star sign to see horoscopes & more.
 	</p>
 
 	<p id="planet-info">
