about me style fix

--- a/about.html
+++ b/about.html
@@ -19,6 +19,8 @@
 	<a id="about" href="index.html">Back</a>
 
 	<p id="about-info">
+    <img src="naota.gif"> <a id="github" href="https://github.com/naota-nandaba/">
+      @naota-nandaba</a> is a 26 year-old Sagittarius living in New York City.
 	</p>
 
 	<script>
