about me style fix 9

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 	<a id="about" href="index.html">Back</a>
 
 	<p id="about-info">
-    <img src="https://avatars1.githubusercontent.com/u/29358651?v=4&u=237c41fc7d554bb7a04fd1a9daab1b374d9e91f9&s=400" width="40" height="40"> <a id="github" href="https://github.com/naota-nandaba/">
+      <a id="github" href="https://github.com/naota-nandaba/">
       @naota-nandaba</a> <br>is a 26 year-old Sagittarius living in New York City.
 	</p>
 
