--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 
 <head>
 	<link rel='stylesheet' href='style.css' />
-	<script src='bower_components/threex.planets/examples/vendor/three.js/build/three.min.js'></script>
-	<script src='bower_components/threex.planets/threex.planets.js'></script>
+	<script src='/bower_components/threex.planets/examples/vendor/three.js/build/three.min.js'></script>
+	<script src='/bower_components/threex.planets/threex.planets.js'></script>
 
 	<script src="https://code.jquery.com/jquery-3.1.0.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.js"></script>
