--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
 	<link rel='stylesheet' href='style.css' />
-	<script src='bower_components/threex.planets/examples/vendor/three.js/build/three.min.js'></script>
-	<script src='bower_components/threex.planets/threex.planets.js'></script>
+	<script src='/bower_components/threex.planets/examples/vendor/three.js/build/three.min.js'></script>
+	<script src='/bower_components/threex.planets/threex.planets.js'></script>
 
 	<script src="https://code.jquery.com/jquery-3.1.0.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.js"></script>
@@ -25,18 +25,18 @@
 				Select Your Star Sign
 				</button>
 					<div class="dropdown-menu">
-						<a class="menu-item" id="aries" href="#">Aries (3/20 - 4/19)</a> <br>
-						<a class="menu-item" id="taurus" href="#">Taurus (4/20 - 5/21)</a> <br>
-						<a class="menu-item" id="gemini" href="#">Gemini (5/22 - 6/21)</a> <br>
-						<a class="menu-item" id="cancer" href="#">Cancer (6/22 - 7/22)</a> <br>
-						<a class="menu-item" id="leo" href="#">Leo (7/23 - 8/22)</a> <br>
-						<a class="menu-item" id="virgo" href="#">Virgo (8/23 - 9/22)</a> <br>
-						<a class="menu-item" id="libra" href="#">Libra (9/23 - 10/22)</a> <br>
-						<a class="menu-item" id="scorpio" href="#">Scorpio (10/23 - 11/22)</a> <br>
-						<a class="menu-item" id="sagittarius" href="#">Sagittarius (11/23 - 12/21)</a> <br>
-						<a class="menu-item" id="capricorn" href="#">Capricorn (12/22 - 1/20)</a> <br>
-						<a class="menu-item" id="aquarius" href="#">Aquarius (1/21 - 2/19)</a> <br>
-						<a class="menu-item" id="pisces" href="#">Pisces (2/20 - 3/19)</a> <br>
+						<a class="menu-item" id="Aries" href="#">Aries (3/20 - 4/19)</a> <br>
+						<a class="menu-item" id="Taurus" href="#">Taurus (4/20 - 5/21)</a> <br>
+						<a class="menu-item" id="Gemini" href="#">Gemini (5/22 - 6/21)</a> <br>
+						<a class="menu-item" id="Cancer" href="#">Cancer (6/22 - 7/22)</a> <br>
+						<a class="menu-item" id="Leo" href="#">Leo (7/23 - 8/22)</a> <br>
+						<a class="menu-item" id="Virgo" href="#">Virgo (8/23 - 9/22)</a> <br>
+						<a class="menu-item" id="Libra" href="#">Libra (9/23 - 10/22)</a> <br>
+						<a class="menu-item" id="Scorpio" href="#">Scorpio (10/23 - 11/22)</a> <br>
+						<a class="menu-item" id="Sagittarius" href="#">Sagittarius (11/23 - 12/21)</a> <br>
+						<a class="menu-item" id="Capricorn" href="#">Capricorn (12/22 - 1/20)</a> <br>
+						<a class="menu-item" id="Aquarius" href="#">Aquarius (1/21 - 2/19)</a> <br>
+						<a class="menu-item" id="Pisces" href="#">Pisces (2/20 - 3/19)</a> <br>
 					</div>
 				</div>
 			</form>
